# Siesta

./: .gitignore  README.md  run_cleanse_engine.sh  run_small_Brain_AI.sh
AI/smallBrainAI/: .clangd  CMakeLists.txt  compile_commands.json  greeter_server.cc
AI/smallBrainAI/.cache/clangd/index/: greeter_server.cc.075EB287310C39C8.idx  main.cpp.F7C93D2E4B1FB918.idx
Data-Sanitation/cleanse_engine/: Cargo.toml  build.rs
Data-Sanitation/cleanse_engine/src/: client.rs  main.rs
docs/Siesta-Docs/: Architecture.md
docs/Siesta-Docs/.obsidian/: community-plugins.json  workspace.json
docs/Siesta-Docs/.obsidian/plugins/obsidian-admonition/: data.json
protos/: calendar.proto  helloworld.proto
