[package]
name = "cleanse_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = { version = "4.4.0", features = [ "actix-tls"] }
awc = "3.2.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
