[package]
name = "cleanse_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", features = ["openssl"] }
prost = "0.12.1"
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
tonic = { version = "0.10.2", features = ["tls"] }
tonic-build = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"

